# dark-souls-platformer

./: CMakeLists.txt  Makefile  README.md  build.sh
include/audio/: audio.h
include/core/: game.h  gameState.h
include/entities/: player.h
include/graphics/: animation.h  graphics.h
include/input/: input.h
include/level/: level.h
libs/SDL2/lib/cmake/SDL2/: sdl2-config.cmake
src/: main.cpp
src/App/: App.cpp  App.h  Window.cpp  Window.h
src/Core/: Enemy.h  GameObject.h  Player.h  Window.cpp  Window.h
src/Systems/: Renderer.cpp  Renderer.h
src/audio/: audio.cpp
src/core/: game.cpp
src/entities/: player.cpp
src/graphics/: animation.cpp  graphics.cpp
src/input/: input.cpp
src/level/: level.cpp
